<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Prêt à Porter</string>
    <string name="email_address">Email address</string>
    <string name="connectFB">Continue with Facebook</string>
    <string name="connectLogin">Sign in</string>
    <string name="createAccount">Create an account</string>
    <string name="disclaimerConnect">By clicking Continue, Create an account or More options, I accept Prêt à Porter\'s <u>general terms and conditions</u>, <u>terms and conditions of service relative to payments</u>, <u>privacy policy</u>, and <u>non-discrimination policy</u>.</string>
    <string name="large_text" tools:keep="@string/large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>
    <string name="welcomeMessage" tools:keep="@string/welcomeMessage">Welcome to Prêt à Porter</string>
    <string name="introduction_accountCreation">What is your name?</string>
    <string name="first_name">First name</string>
    <string name="surname">Surname</string>
    <string name="get_email_address">And your email address?</string>
    <string name="create_password_prompt">Create a password</string>
    <string name="get_dob">What is your date of birth?</string>
    <string name="dob_disclaimer">All Prêt à Porter members must be at least 18 years old. Other users will not see your date of birth.</string>
    <string name="dob">Date of birth</string>
    <string name="login_prompt">Enter your email address and password</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" tools:keep="@string/action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="email_exists" tools:keep="@string/email_exists">This email has already been used to create an account. Please enter your password to continue.</string>
    <string name="forgot_password">Forgotten password?</string>
    <string name="error_invalid_password">Your password must contain at least 8 characters, at least one capital letter, and a special character.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_field">This field is invalid</string>
    <string name="error_invalid_date">Please enter a valid date in the following format.\nDD/MM/YYYY </string>
    <string name="permission_rationale" tools:keep="@string/permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="password" tools:keep="@string/password">Password</string>
    <string name="add_item">Add an item</string>
    <string name="item_title">Title of listing</string>
    <string name="item_title_hint">e.g. Massimo Dutti 3-piece suit</string>
    <string name="item_desc">A description of your item</string>
    <string name="item_desc_hint">e.g. Colour, size, condition, etc.</string>
    <string name="item_price">Your asking price (daily)</string>
    <string name="item_price_hint">16.00</string>
    <string name="item_image">Upload photos (6 max)</string>
    <string name="action_add_item"> Post my item </string>
    <string name="item_help">Need some help?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_account1">Create an Account</string>
    <string name="title_activity_create_account2">Create an Account</string>
    <string name="title_activity_create_account3">Create an Account</string>
    <string name="title_activity_create_account4">Create an Account</string>
    <string name="Import" tools:keep="@string/Import">Import</string>
    <string name="gallery" tools:keep="@string/gallery">Gallery</string>
    <string name="userListings">Listings</string>
    <string name="tools" tools:keep="@string/tools">Tools</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_forgot_password">Forgot password</string>
    <string name="get_email_address2">What is your email address?</string>
    <string name="title_activity_profile_page">Profile Page</string>
    <string name="usr_active_rentals">None</string>
    <string name="usr_active_rentals_caption">Active Rentals</string>
    <string name="date_format_hint">DD/MM/YYYY</string>
    <string name="item_img_description">item image description</string>
    <string name="profile_pic_description" tools:keep="@string/profile_pic_description">profile pic description</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_listings">Listings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string name="item_lister">Lister:</string>
    <string name="lister_first_name">FirstName</string>
    <string name="filter_list">Filter</string>
    <string name="filter_by_description">Description</string>
    <string name="filter_by_category">Category</string>
    <string name="filter_by_name">Name (default)</string>
    <string name="filter_by_size">Size</string>
    <string name="filter_by_colour">Colour</string>
    <string name="item_rating">item rating</string>
    <string name="item_price_card">item price</string>
</resources>