<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.example.alexandrebornerand.pretaporter.ProductPageActivityAlt"
    android:background="@drawable/grad">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/product_pic_imgView"
        app:layout_constraintEnd_toEndOf="@+id/product_pic_imgView"
        app:layout_constraintStart_toStartOf="@+id/product_pic_imgView"
        app:layout_constraintTop_toTopOf="@+id/product_pic_imgView" />

    <TextView
        android:id="@+id/item_description_ET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/item_desc_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        app:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.661" />

    <TextView
        android:id="@+id/item_description_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_desc"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/item_description_ET"
        app:layout_constraintStart_toStartOf="@+id/item_description_ET" />

    <TextView
        android:id="@+id/item_name_tv"
        android:layout_width="202dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/item_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <ImageButton
        app:srcCompat="@drawable/ic_edit_white_24dp"
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/item_help"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:background="@color/transparent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/asking_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_price"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/price_EditText"
        app:layout_constraintStart_toStartOf="@+id/price_EditText" />

    <EditText
        android:id="@+id/price_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/item_price_hint"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        app:backgroundTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <ImageView
        android:id="@+id/product_pic_imgView"
        android:layout_width="243dp"
        android:layout_height="218dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/lister_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/item_lister"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/asking_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_pic_imgView"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/lister_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lister_first_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/asking_price"
        app:layout_constraintStart_toEndOf="@+id/lister_TV"
        app:layout_constraintTop_toBottomOf="@+id/product_pic_imgView"
        app:layout_constraintVertical_bias="0.943" />

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@+id/lister_name"
        android:background="@drawable/circle_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lister_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56">


        <ImageView
            android:id="@+id/user_img"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:adjustViewBounds="true"
            android:background="@drawable/circle"
            android:padding="0dp"
            android:scaleType="centerInside"
            app:backgroundTint="@color/white"
            tools:layout_editor_absoluteX="298dp"
            tools:layout_editor_absoluteY="369dp" />
        <!--android:src="@drawable/img_0002" />-->

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>
